--- a/style/components/chooseCard.scss
+++ b/style/components/chooseCard.scss
@@ -18,11 +18,18 @@
   border-radius: 20px;
 }
 
+.containerImage {
+  height: 100px;
+  width: 100px;
+  border-radius: 500px;
+  overflow: hidden;
+}
+
 .image {
   height: 100px;
-  width: 100;
+  width: 100px;
   border-radius: 500px;
-  border: 3px #ff9f14 solid;
+  border: 3px #22225e solid;
 }
 
 .text {
