--- a/style/pages/Description.scss
+++ b/style/pages/Description.scss
@@ -18,13 +18,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin: 0.5rem 0 1rem;
 }
 
 .twitter {
   background-color: cyan;
-  margin: 0.5rem 0 2rem;
   text-align: center;
   width: 100%;
+  margin: 0.5rem;
   padding: 0.5rem 1rem;
   border-radius: 10px;
 }
